--- a/stylesalt.css
+++ b/stylesalt.css
@@ -10,12 +10,12 @@ nav{
 }
 header{
     
-    background-color:#e63462;
+    background-color:#e59500;
     width: 100%;
     border-radius: 10px;
 }
 body{
-    background-color:#333745;
+    background-color:#231f20;
     color:#2a324B ;
 }
 
@@ -61,42 +61,83 @@ nav a:hover{
     margin-bottom: 25px;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap-reverse;
+    flex-direction: column;
+    align-items: center;
 }
-#columnOne,#columnTwo{
-    background-color:#8d3654 ;
-    height: 500px;
+#contentcolumns{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+
+}
+#contentcolumns a{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+#content a{
+    max-width: 700px;
     width: 45%;
+    height: 500px;
+    min-width: 500px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.column{
+    background-color:#cc004e ;
+    height: 500px;
+    min-width: 500px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border-radius:2px;
-    color: #DA1B4E;
+    color: #e5dada;
+    
+    
 }
-#columnOne img{
-    width: 70%;
+h2{
+    margin-top: 0px;
+}
+.column img{
+    width: 62%;
     height: 70%;
+    max-width: 400px;
+    max-height: 400px;
 }
-#columnOne:hover,#columnTwo:hover{
-    background-color:#ba355b ;
+.column:hover{
+   background-color: #f5005e;
 }
-#columnOne p{
+.column p{
     margin-top: 10px;
     text-align: center;
 }
-#columnOne h2{
+.column h2{
     margin-top: 8px;
     margin-bottom: 4px;
+    text-align: center;
 }
-#columnOne h3{
+.column h3{
     margin-bottom: 0px;
+    text-align: center;
 }
 
 
 footer{
     height: 50px;
-    background-color:#fe5f55 ;
+    background-color:#002642 ;
     width: 100%;
     border-radius: 10px;
+}
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer a:hover{
+    color:#e59500 ;
 }
 
